--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "MLBWYA: The Blog of Brad Culley"
+title: "MLBWYA: Brad Culley's Blog"
 author: "Brad Culley"
 description: "Computing, literature, art, and more" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
