--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "MLBWYA: Brad Culley's Blog"
-author: "Brad Culley"
+#author: "Brad Culley"
 description: "Computing, literature, art, and more" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
