--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "MLBWYA: Brad Culley's Blog"
 #author: "Brad Culley"
-description: "Computing, literature, art, and more" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "'Life is not a private affair. A story and its lessons are only made useful if shared.' ― Dan Millman" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
